tests/invalid/void_vars_and_params.ar
fn main() {
    const something = {
        const a = 1;
    };
    cool(something);
}

fn cool(arg: void) {}

//! 8:9: error: useless parameter due to type `void`
//! 2:11: error: useless variable due to type `void`
